--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ anyio==3.7.1
 async-timeout==4.0.3
 asyncpg==0.29.0
 atlastk==0.13.3
+beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -40,6 +41,7 @@ PyYAML==6.0.1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
 sqlparse==0.4.4
 starlette==0.27.0
