--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ anyio==3.7.1
 async-timeout==4.0.3
 asyncpg==0.29.0
 atlastk==0.13.3
+attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -27,11 +29,14 @@ Mako==1.3.0
 MarkupSafe==2.1.3
 numpy==1.26.2
 openpyxl==3.1.2
+outcome==1.3.0.post0
 pbr==6.0.0
 psycopg2==2.9.9
+pycparser==2.22
 pydantic==2.4.2
 pydantic_core==2.10.1
 pypika-tortoise==0.1.6
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
@@ -39,8 +44,10 @@ python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
+selenium==4.19.0
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.23
 sqlparse==0.4.4
@@ -49,9 +56,12 @@ Tempita==0.5.2
 tomlkit==0.12.4
 tortoise==0.1.1
 tortoise-orm==0.20.0
-typing_extensions==4.8.0
+trio==0.25.0
+trio-websocket==0.11.1
+typing_extensions==4.11.0
 tzdata==2023.3
 urllib3==2.2.1
 uvicorn==0.24.0.post1
 watchfiles==0.21.0
 websockets==12.0
+wsproto==1.2.0
