--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ MarkupSafe==2.1.3
 numpy==1.26.2
 openpyxl==3.1.2
 outcome==1.3.0.post0
+packaging==24.0
 pbr==6.0.0
 psycopg2==2.9.9
 pycparser==2.22
@@ -63,5 +64,6 @@ tzdata==2023.3
 urllib3==2.2.1
 uvicorn==0.24.0.post1
 watchfiles==0.21.0
+webdriver-manager==4.0.1
 websockets==12.0
 wsproto==1.2.0
